<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="io.incepted.cryptoaddresstracker.viewModels.NewAddressViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NewAddressActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/new_addr_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/new_addr_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/new_address" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_normal">

                <TextView
                    android:id="@+id/new_addr_addr_name_dummy"
                    style="@style/TextSmallRegularAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/address_name_optional"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/new_addr_name_edit_text"
                    style="?attr/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/i_e_my_main_address"
                    android:inputType="textPersonName"
                    android:text="@={viewmodel.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_addr_addr_name_dummy" />

                <TextView
                    android:id="@+id/new_addr_addr_field_dummy"
                    style="@style/TextSmallRegularAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/your_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_addr_name_edit_text" />

                <TextView
                    android:id="@+id/new_addr_addr_required"
                    style="@style/TextSmallRegularAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xxsmall"
                    android:layout_marginStart="@dimen/spacing_xxsmall"
                    android:text="@string/asterisk"
                    android:textColor="@color/state_fail_color"
                    app:layout_constraintStart_toEndOf="@id/new_addr_addr_field_dummy"
                    app:layout_constraintTop_toTopOf="@+id/new_addr_addr_field_dummy" />


                <EditText
                    android:id="@+id/new_addr_addr_edit_text"
                    style="?attr/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:hint="@string/i_e_0x123456789"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:text="@={viewmodel.address}"
                    app:layout_constraintEnd_toStartOf="@+id/new_addr_qr_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_addr_addr_field_dummy" />

                <ImageView
                    android:id="@+id/new_addr_qr_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_xsmall"
                    android:contentDescription="@string/scan_qr_code"
                    android:onClick="@{() -> viewmodel.toQRScanActivity()}"
                    android:src="?attr/qr_scan_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/new_addr_addr_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/new_addr_addr_edit_text" />


                <TextView
                    android:id="@+id/new_addr_required_field_dummy"
                    style="@style/TextSmallRegularAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/spacing_xsmall"
                    android:text="@string/asterisk_warning"
                    android:textColor="@color/state_fail_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_addr_addr_edit_text" />

                <TextView
                    android:id="@+id/new_addr_save_button"
                    style="?attr/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:gravity="center"
                    android:paddingBottom="@dimen/spacing_small"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:paddingTop="@dimen/spacing_small"
                    android:text="@string/save"
                    android:onClick="@{() -> viewmodel.saveAddress()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_addr_required_field_dummy" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/new_addr_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"/>

        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>