<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_detail_edit"
        android:icon="?attr/edit_icon"
        android:title="@string/edit_address_name"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_detail_delete"
        android:icon="?attr/delete_icon"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>