<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/main_currency_conversion"
        android:title="@string/eth"
        app:showAsAction="always"/>

    <item
        android:id="@+id/main_add_new_address"
        android:icon="@drawable/ic_add_24_white"
        android:title="@string/add_a_new_address"
        app:showAsAction="ifRoom" />
</menu>